tests/snapshots/paste_operations_test__P_characterwise_beginning.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
worl[w]orld
