tests/snapshots/paste_operations_test__P_characterwise_middle.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:18
Lines: 1

Buffer:
hello world hello [t]est
