tests/snapshots/paste_operations_test__P_linewise_first_line.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 4

Buffer:
line 2
[l]ine 1
line 2
line 3
