tests/snapshots/paste_operations_test__P_multiple_times.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 4:0
Lines: 5

Buffer:
a
a
a
a
[b]
