tests/snapshots/paste_operations_test__delete_overrides_yank_register.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
first
thirdsecond
[ ]
