tests/snapshots/paste_operations_test__p_characterwise_empty_line.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 4

Buffer:
hello

[h]ello
world
