tests/snapshots/paste_operations_test__p_characterwise_end_of_line.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:17
Lines: 1

Buffer:
hello worldhello [ ]
