tests/snapshots/paste_operations_test__p_characterwise_middle_of_word.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:13
Lines: 1

Buffer:
hello whello [o]rld
