tests/snapshots/paste_operations_test__p_linewise_last_line.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 3:0
Lines: 4

Buffer:
line 1
line 2
line 3line 1
[ ]
