tests/snapshots/paste_operations_test__p_linewise_middle.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 5

Buffer:
line 1
line 2
[l]ine 2
line 3
line 4
